--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
   .container(style='width:100%; margin-right:auto')
     a.navbar-brand(href='/', style='margin-left:40px')
-      img(src='https://ifh.cc/g/HwdkM.jpg' alt='logo' width='200px')
+      img(src='https://ifh.cc/g/HwdkM.jpg', alt='logo', width='200px',onload="recentViewedList('recentItems')")
     button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarResponsive.collapse.navbar-collapse
