--- a/views/category/grocery.pug
+++ b/views/category/grocery.pug
@@ -53,3 +53,11 @@ block content
                     a(href='/articles/'+article._id)=article.title
                   p #{article.members} 명 모집            
                   p #{article.deadline} 까지
+      .col-lg-1
+        //- p 최근목록
+        //- p#recentItems
+        nav.navbar(class='navbar-expand-xl|lg|md|sm')
+          ul.navbar-nav
+            #cur_item
+              h5(style='text-align:center') 최근목록
+              #recentItems
