최근목록 없을 때 최근목록 칸 표시되지 않도록 수정

--- a/views/article.pug
+++ b/views/article.pug
@@ -94,10 +94,11 @@ block content
         a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
     
       .col-lg-1
+        #recentItems
         //- p 최근목록
         //- p#recentItems
-        nav.navbar(class='navbar-expand-xl|lg|md|sm')
-          ul.navbar-nav
-            #cur_item
-              h5(style='text-align:center') 최근목록
-              #recentItems
+        //- nav.navbar(class='navbar-expand-xl|lg|md|sm')
+        //-   ul.navbar-nav
+        //-     #cur_item
+        //-       h5(style='text-align:center') 최근목록
+        //-       #recentItems
