--- a/views/index.pug
+++ b/views/index.pug
@@ -61,10 +61,11 @@ block content
 
 
       .col-lg-1
+        #recentItems
         //p 최근목록
-        nav.navbar(class='navbar-expand-xl|lg|md|sm')
-          ul.navbar-nav
-            #cur_item
-              h5(style='text-align:center') 최근목록            
-              #recentItems
+        //- nav.navbar(class='navbar-expand-xl|lg|md|sm')
+        //-   ul.navbar-nav
+        //-     #cur_item
+        //-       //h5(style='text-align:center') 최근목록            
+        //-       #recentItems
                          
