카테고리 기능 추가

--- a/views/category/drinkNIcecream.pug
+++ b/views/category/drinkNIcecream.pug
@@ -42,7 +42,7 @@ block content
           button(type="button" onclick="location.href='/etc'").btn-ctg 기타
       #cent-menu.col-lg-8
         .row
-          h2(style='margin-left:30px; margin-bottom:20px') 즉석식품
+          h2(style='margin-left:30px; margin-bottom:20px') 음료수 / 아이스크림
         .row
           each article in articles
             .col-lg-4(style='float:left; margin-bottom:20px')
