--- a/views/index.pug
+++ b/views/index.pug
@@ -34,13 +34,13 @@ block content
                 button(type="button" style='margin-left : 10px; width:110px;' onclick="location.href='/users/register'") 회원가입
         #category
           p(align='center' style='font-size:1rem') 카테고리
-          button(type="button" onclick="location.href='grocery'").btn-ctg 식자재
-          button.btn-ctg 즉석식품
-          button.btn-ctg 반찬
-          button.btn-ctg 음료수/아이스크림
-          button.btn-ctg 커피/차
-          button.btn-ctg 해외직구
-          button.btn-ctg 기타
+          button(type="button" onclick="location.href='/grocery'").btn-ctg 식자재
+          button(type="button" onclick="location.href='/instant'").btn-ctg 즉석식품
+          button(type="button" onclick="location.href='/sidedish'").btn-ctg 반찬
+          button(type="button" onclick="location.href='/drinkNIcecream'").btn-ctg 음료수/아이스크림
+          button(type="button" onclick="location.href='/coffeeNTea'").btn-ctg 커피/차
+          button(type="button" onclick="location.href='/overseas'").btn-ctg 해외직구
+          button(type="button" onclick="location.href='/etc'").btn-ctg 기타
     
       // slide bar & banner-
       #cent-menu.col-lg-8
