--- a/views/article.pug
+++ b/views/article.pug
@@ -30,12 +30,13 @@ block content
                 .col-lg-5
                   img(src='../image/smile.png', width='100px', style="margin-left:5px;margin-top:5px")
                 .col-lg-7(style='margin-top:25px')
-                  p(style='line-height:0%') #{user.name} 님,
+                  p(style='line-height:0%') 
+                    b #{user.name} 님,
                   | 환영합니다!
                   p(style='margin-top:15px') 알림(0)
               .row(style="padding-top:20px")
                 .col-lg-6
-                  button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='./mypage'") 내정보
+                  button.btn.btn-primary.btn-block(type="button", style='width:100%', onclick="location.href='/mypage'") 내정보
                 .col-lg-6
                   button.btn.btn-primary.btn-block(type="button" style=' width:100%' onclick="location.href='/users/logout'") 로그아웃
           else
@@ -51,13 +52,13 @@ block content
                 button(type="button" style='margin-left : 10px; width:110px;' onclick="location.href='/users/register'") 회원가입
         #category
           p(align='center' style='font-size:1rem') 카테고리
-          button.btn-ctg 식자재
-          button.btn-ctg 즉석식품
-          button.btn-ctg 반찬
-          button.btn-ctg 음료수/아이스크림
-          button.btn-ctg 커피/차
-          button.btn-ctg 해외직구
-          button.btn-ctg 기타
+          button(type="button" onclick="location.href='/grocery'").btn-ctg 식자재
+          button(type="button" onclick="location.href='/instant'").btn-ctg 즉석식품
+          button(type="button" onclick="location.href='/sidedish'").btn-ctg 반찬
+          button(type="button" onclick="location.href='/drinkNIcecream'").btn-ctg 음료수/아이스크림
+          button(type="button" onclick="location.href='/coffeeNTea'").btn-ctg 커피/차
+          button(type="button" onclick="location.href='/overseas'").btn-ctg 해외직구
+          button(type="button" onclick="location.href='/etc'").btn-ctg 기타
       .col-lg-8
         .row(style='margin-top:50px')
           .col-lg-5
