검색기능구현

--- a/views/home/freeboard.pug
+++ b/views/home/freeboard.pug
@@ -5,3 +5,11 @@ block content
     p
     h1 freeboard(자유게시판)
     p freeboard(자유게시판)
+    div
+      table
+        tr
+          th 번호
+          th 제목
+          th 작성자
+          th 날짜
+          th 조회수
