--- a/views/article.pug
+++ b/views/article.pug
@@ -93,6 +93,9 @@ block content
                   td #{article.members}
         a.btn.btn-secondary(role='button' href='/articles/edit/'+article._id, style='width:5rem; margin-right:1rem') 수정
         a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
+        br
+        br
+        a.btn.btn-warning(role='button' href='/articles/join/'+article._id, style='width:11rem; margin-right:5rem') 신청
     
       .col-lg-1
         #recentItems
