개설자는 신청 불가하게함

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -25,7 +25,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
         
         select.custom-select(name='sorting')
           option(selected='') 정렬
-          option(value='title') 제목순
+          option(value='title') 게시일
           option(value='dday') 마감일순
-          option(value='price') 가격순
+          //- option(value='price') 가격순
         
