--- a/views/article.pug
+++ b/views/article.pug
@@ -91,11 +91,12 @@ block content
                 tr
                   td 모집 인원
                   td #{article.members}
-        a.btn.btn-secondary(role='button' href='/articles/edit/'+article._id, style='width:5rem; margin-right:1rem') 수정
-        a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
-        br
-        br
-        a.btn.btn-warning(role='button' href='/articles/join/'+article._id, style='width:11rem; margin-right:5rem') 신청
+        if user
+          if user._id==article.room_maker
+            a.btn.btn-secondary(role='button' href='/articles/edit/'+article._id, style='width:5rem; margin-right:1rem') 수정
+            a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
+        
+        a.btn.btn-warning(role='button' href='/articles/join/'+article._id, style='width:11rem; margin-right:5rem;float:right') 신청
     
       .col-lg-1
         #recentItems
