--- a/views/index.pug
+++ b/views/index.pug
@@ -53,8 +53,7 @@ block content
                   .card-body
                     h5.card-title
                       a(href='/articles/'+d._id)=d.title
-                    p #{d.members} 명 모집    
-                    p 현재 #{d.current_member} 명 모집함!        
+                    p #{d.current_member} / #{d.members} 명 모집      
                     p #{d.deadline} 까지
           else 
             each article in articles
@@ -64,8 +63,7 @@ block content
                     .card-body
                       h5.card-title
                         a(href='/articles/'+article._id)=article.title
-                      p #{article.members} 명 모집     
-                      p 현재 #{article.current_member} 명 모집함!            
+                      p #{article.current_member} / #{article.members} 명 모집
                       p #{article.deadline} 까지
         if !data
           button.btn.btn-warning(type='button' style='float:right; width:5rem; margin-top:1rem; margin-right:1rem; margin-bottom:3rem' onclick="location.href='/articles/add'") 방 개설     
