--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -17,15 +17,11 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
           a.nav-link(href='/basket') 같이 살까?
         li.nav-item.active
           a.nav-link(href='#' , style='margin-left:10px;')
-    
+
       form.form-inline(method='GET' action=`/articles/search?item=${item}`)
         input.form-control(type='text' name='item' placeholder='검색하실 내용을 입력하세요' style='width:25rem; height:3.2rem')
         button.btn.btn-light(type='submit' style='height:3.2rem;margin-right:8rem')
           img(src='https://image.flaticon.com/icons/svg/149/149852.svg' alt='search icon' width='25px')
-        
-        select.custom-select(name='sorting')
-          option(selected='') 정렬
-          option(value='title') 게시일
-          option(value='dday') 마감일순
-          //- option(value='price') 가격순
-        
+        button(type="button" style="float:left" onclick="location.href='/articles/sortpage'") 마감기한
+        button(type="button" style="float:'left' margin-left:'5px'" onclick="location.href='/articles/sortpage1'") 최근등록
+        button(type="button" style="float:'left' margin-left:'5px'" onclick="location.href='/articles/sortpage2'") 모집인원
