찜버튼추가,유저스키마mydips배열추가,articles.js함수추가

--- a/views/article.pug
+++ b/views/article.pug
@@ -97,7 +97,7 @@ block content
             a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
         
         a.btn.btn-warning(role='button' href='/articles/join/'+article._id, style='width:11rem; margin-right:5rem;float:right') 신청
-    
+        a.btn.btn-warning(role='button' href='/articles/dips/'+article._id, style='width:11rem; margin-right:5rem;float:right') 찜
       .col-lg-1
         #recentItems
         //- p 최근목록
