정렬기능퀵소드사용구현

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -24,6 +24,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
           img(src='https://image.flaticon.com/icons/svg/149/149852.svg' alt='search icon' width='25px')
         select.custom-select(name='sorting', onchange="if(this.value) location.href=(this.value);")
           option(selected='') 정렬
-          option(value='/articles/sortpage') 마감기한
-          option(value='/articles/sortpage1') 최근등록
-          option(value='/articles/sortpage2') 모집인원
+          option(value='/articles/sort_deadline') 마감기한
+          option(value='/articles//sort_recent_enroll') 최근등록
+          option(value='/articles/sort_pernum') 모집인원
