login.pug에 id찾기 및 회원가입 버튼 추가, article.pug에 신청/찜버튼 디자인 수정 및 인원 마감 시 신청버튼이 마감으로 바뀌도록 수정, add_artivle.pug 개설날짜 자동 입력되게 수정, index.pug 이미지 클릭시 페이지 이동 기능 추가

--- a/views/add_article.pug
+++ b/views/add_article.pug
@@ -8,8 +8,11 @@ block content
         h3 #{title}
         form(method='POST', action='/articles/add', enctype="multipart/form-data")
           #form-group
-            label 시작 날짜
-            input.form-control(name='startdate', type='date', min='2019-01-01' , required)
+            //-label 시작 날짜
+            input.form-control(name='startdate', type='date', min='2019-01-01' ,id='currentDate', style="display:none")
+            script.
+              document.getElementById('currentDate').value = new Date().toISOString().substring(0, 10);;
+
           #form-group
             label 모집 마감일
             input.form-control(name='deadline', type='date',min='2019-01-01' , required)
