--- a/views/login.pug
+++ b/views/login.pug
@@ -11,4 +11,6 @@ block content
         #form-group
           input.form-control(name='password',type='password', placeholder='비밀번호', style='margin-top:1rem')
         br
-        input.btn.btn-primary(type='submit',value='로그인', style='width:100%; margin-bottom:9rem')
+        input.btn.btn-primary(type='submit',value='로그인', style='width:100%;')
+        button.btn.btn-light(type="button" style="width:10.5rem; background-color: lightgrey; margin-top:1rem; margin-bottom:9rem", onclick="location.href='./forgot'") ID/PW찾기
+        button.btn.btn-light(type="button" style='width:10.5rem; background-color: lightgrey; margin-top:1rem; margin-left:0.5rem; margin-bottom:9rem' onclick="location.href='/users/register'") 회원가입
