--- a/views/article.pug
+++ b/views/article.pug
@@ -96,8 +96,11 @@ block content
             a.btn.btn-secondary(role='button' href='/articles/edit/'+article._id, style='width:5rem; margin-right:1rem') 수정
             a.btn.btn-danger.delete-article(href='/articles/delete/'+article._id, style='width:5rem') 삭제
         
-        a.btn.btn-warning(role='button' href='/articles/join/'+article._id, style='width:11rem; margin-right:5rem;float:right') 신청
-        a.btn.btn-warning(role='button' href='/articles/dips/'+article._id, style='width:11rem; margin-right:5rem;float:right') 찜
+        a.btn.btn-warning(role='button' href='/articles/dips/'+article._id, style='width:7rem; margin-right:1rem;float:right') 찜
+        if article.members>article.current_member
+          a.btn.btn-primary(role='button' href='/articles/join/'+article._id, style='width:7rem; margin-right:1rem;float:right') 신청
+        else
+          a.btn.btn-light(role='button', style='width:7rem; margin-right:1rem;float:right', disabled) 마감
       .col-lg-1
         #recentItems
         //- p 최근목록
