article.js 구매글 수정 시 현재 인원 없어지는 현상 수정

--- a/views/edit_article.pug
+++ b/views/edit_article.pug
@@ -51,4 +51,4 @@ block content
             textarea.form-control(name='comment', cols='30', rows='5')= article.comment
           
           br
-          input.btn.btn-primary(type='submit',value='Submit')
+          input.btn.btn-primary(type='submit',value='수정', style="float:right; width:5rem")
