찜신청 기능 구현 (중복x)

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -8,7 +8,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
      #navbarResponsive.d-flex.flex-column.flex-wrap.collapse.navbar-collapse
       ul.navbar-nav.flex-row-reverse(style='width:45rem; margin-bottom:1rem')
         li.nav-item.active
-          a.nav-link(href='/dips') 찜
+          a.nav-link(href='/articles/mydips') 찜
         li.nav-item.active
           a.nav-link(href='/mypage' , style='margin-left:10px;') 마이페이지
         li.nav-item.active
