edit mydips view

--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -11,7 +11,8 @@ block content
                 .col-lg-5
                   img(src='../image/smile.png', width='100px', style="margin-left:5px;margin-top:5px")
                 .col-lg-7(style='margin-top:25px')
-                  p(style='line-height:0%') #{user.name} 님,
+                  p(style='line-height:0%') 
+                    b #{user.name} 님,
                   | 환영합니다!
                   p(style='margin-top:15px') 알림(0)
               .row(style="padding-top:20px")
