같이 살까구현

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -14,7 +14,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
         li.nav-item.active
           a.nav-link(href='/freeboard',  style='margin-left:10px;') 자유게시판
         li.nav-item.active
-          a.nav-link(href='/basket') 같이 살까?
+          a.nav-link(href='/articles/basket') 같이 살까?
         li.nav-item.active
           a.nav-link(href='#' , style='margin-left:10px;')
 
