신청 시 이름 바뀌는 오류 수정

--- a/views/shared/_navbar.pug
+++ b/views/shared/_navbar.pug
@@ -25,5 +25,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top
         select.custom-select(name='sorting', onchange="if(this.value) location.href=(this.value);")
           option(selected='') 정렬
           option(value='/articles/sort_deadline') 마감기한
-          option(value='/articles/sort_recent_enroll') 최근등록
+          option(value='/articles/sort_recent_enroll') 개설일자
           option(value='/articles/sort_pernum') 모집인원
