--- a/views/home/add_freeboard.pug
+++ b/views/home/add_freeboard.pug
@@ -1,17 +1,18 @@
 extends ../layout
 
 block content
-    .container(style='width: 1500px;margin-top: 120px' )
+    .container(style='width: 1500px;margin-top: 100px;margin-left: 80px' )
       .row
-        .col-lg-offset-2
-        .col-lg-8
-        h3 #{title}
-        form(method='POST', action='/freeboard/write', enctype="multipart/form-data")
-          #form-group
-            label 제목
-            input.form-control(name='title', type='text', required)
-          #form-group
-            label 내용
-            textarea.form-control(name='contents', cols='100', rows='15', required)
+        .col-lg-10
+          h4 게시글 작성
           br
-          input.btn.btn-primary(type='submit', value='글 쓰기', style='margin-bottom:5rem')
+          br
+          form(method='POST', action='/freeboards/adds')
+            #form-group
+              label 제목
+              input.form-control(name='title'  placeholder='제목을 입력해주세요.' type='text', required)
+            #form-group
+              label 내용
+              textarea.form-control(name='contents'  placeholder='내용을 입력해주세요.'  cols='100' rows='15', required)
+            br
+            input.btn.btn-primary(type='submit', value='글 쓰기', style='margin-bottom:5rem')
