--- a/views/article.pug
+++ b/views/article.pug
@@ -48,7 +48,7 @@ block content
               div
                 button.btn.btn-primary.btn-block(type='submit', value='Submit') 로그인
               #but
-                button(type="button" style="width:110px", onclick="location.href='./forgot'") ID/PW찾기
+                button(type="button" style="width:110px", onclick="location.href='/'") ID/PW찾기
                 button(type="button" style='margin-left : 10px; width:110px;' onclick="location.href='/users/register'") 회원가입
         #category
           p(align='center' style='font-size:1rem') 카테고리
