--- a/views/home/mypage.pug
+++ b/views/home/mypage.pug
@@ -51,7 +51,7 @@ block content
             tr
               td 비밀번호 변경
               td
-                button.btn.btn-secondary(type='button' onclick="window.open('http://google.com')")
+                button.btn.btn-secondary(type='button' onclick="location.href='/')")
                   |비밀번호 변경
             tr
               td 전화번호
