자유게시판 글 목록 view 수정

--- a/views/home/freeboard_list.pug
+++ b/views/home/freeboard_list.pug
@@ -3,25 +3,25 @@ extends ../layout
 block content
   .container(style='margin-top: 150px')
     .row
-      h4 게시판
-      table.table.table-striped
-        thead
-          tr
-            th(width ="90") 날짜
-            th(width ="80") 작성자
-            th(width ="100") 제목
-            th(width ="200") 내용
-        tbody
-          each freeboard in freeboards
-            tr
-              td  #{freeboard.date}
-              td  #{freeboard.author}
-              td
-                a(href='/freeboards/'+freeboard._id)=freeboard.title
-              td
-                a(href='/freeboards/'+freeboard._id)=freeboard.contents
+      .col-lg-12
+        .row
+          h4 게시판
+          table.table.table-striped
+            thead
+              tr
+                th(width='70%', style='padding-left:30px;') 제목
+                th 날짜
+                th 작성자
+            tbody
+              each freeboard in freeboards
+                tr
+                  td(style='padding-left:30px;')
+                    a(href='/freeboards/'+freeboard._id)=freeboard.title
+                  td  #{freeboard.date}
+                  td  #{freeboard.author}
+        .row
+          button.btn.btn-warning(type='button', style='float:right', onclick="location.href='/freeboards/add'") 글쓰기
+
 
       script(src='js/jquery-3.1.1.js')
       script(src='js/bootstrap.min.js')
-      .row
-        button.btn.btn-warning(type='button' style='margin-left: 1050px;' onclick="location.href='/freeboards/add'") 글쓰기
